--- a/studyBuddy.html
+++ b/studyBuddy.html
@@ -141,6 +141,12 @@ padding-left: 10px;
       box-shadow: 0px 5px 2px -1px rgba(50, 50, 50, 0.75);
     }
 
+
+
+    #quesNavLeft{
+      margin-left: 45%;
+      margin-right: 20px;
+    }
     .hideMe {
       display: none;
     }
@@ -167,19 +173,25 @@ margin-right: 20px;
   line-height: 2.3;
   margin-top: 100px;
 }
-    /*
-label > input{
-  visibility: hidden;
-  position: absolute;
+
+#rev-mistakes{
+  float: right;
+  margin: -150px 0 0 0;
 }
-label > input + img{
-  cursor:pointer;
-  border:2px solid transparent;
+
+.lessonTitle {
+  max-width: 300px;
 }
-label > input:checked + img{
-  border:2px solid #f00;
+
+.lessonMenuitem {
+  width: 200px;
 }
-*/
+#feedbackDiv{
+  border: none !important;
+}
+#closeBtn{
+  width:80px;
+}
   </style>
 </head>
 
