--- a/index.html
+++ b/index.html
@@ -228,19 +228,30 @@
       top: 550px;
 
     }
+
+    #lessonData{
+      position: fixed;
+      border: 1px solid black;
+      top: 10px;
+      padding: 5px;
+    }
+ #lessonData > p {
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  
+ }
+  
   </style>
 </head>
 
 <body>
 
-  <!--Main Navigation-->
-  <header>
 
-
-
-  </header>
-  <!--Main Navigation-->
-
+  <div id="lessonData">
+      <p>Welcome! Use the arrows to navigate.</p>
+      <p>Pess SELECT to choose the highlighted item</p>
+      <p>Press the A, B, C, D, buttons to answer questions.</p>
+    </div>
   <!--Main Layout-->
   <main>
     <div class="container" id="studyBuddy">
@@ -295,9 +306,7 @@
 
 
       </div>
-      <div id="lessonData">
-
-      </div>
+    
       <!--Content Screen-->
 
 
