--- a/index.html
+++ b/index.html
@@ -233,12 +233,19 @@
       position: fixed;
       border: 1px solid black;
       top: 10px;
-      padding: 5px;
+      left: 15px;
+      padding: 15px 15px 5px 30px;
+      
     }
  #lessonData > p {
   font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
   
+ }
+
+ #info-button{
+      background-color: none;
+    border: none;
  }
   
   </style>
@@ -246,7 +253,7 @@
 
 <body>
 
-
+    <button id='info-button'><img src='infobtn.png' height ='30px' /></button>
   <div id="lessonData">
       <p>Welcome! Use the arrows to navigate.</p>
       <p>Pess SELECT to choose the highlighted item</p>
