menu goes backward, but not forward

--- a/index.html
+++ b/index.html
@@ -296,7 +296,6 @@
           <a class='sbArrow'>
             <img id='sbDwn' src='sbDown.png'>
           </a>
-
         </div>
         <br>
         <a class='sbMenSel'>
@@ -304,12 +303,12 @@
         </a>
         <br>
         <a class='sbMenSel'>
-          <img id='sbMenuBtn' src='sbMenu.png'>
+          <img id='sbMenuBtn' data: src='sbMenu.png'>
         </a>
       </div>
       <!--StudyBuddy Buttons-->
       <!--Content Screen-->
-      <div id="frame">
+      <div id="frame" data-num="0">
 
 
       </div>
