--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <!--  SCRIPTS  -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
-  <script src="/assets/studyBuddy.js">
+  <script src="./assets/studyBuddy.js">
   </script>
 </body>
 
