--- a/index.html
+++ b/index.html
@@ -4,33 +4,34 @@
 <head>
   <!-- Required meta tags always come first -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Study Buddy</title>
- <link rel="stylesheet" type="text/css" href="./assets/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/style.css">
 
 </head>
 
 <body>
 
-  
   <!--Main Layout-->
   <main>
+    <img class="sbBackground" src="./img/sbFrontFrame.png"></img>
+
     <div class="container" id="studyBuddy">
 
       <!--StudyBuddy Left Buttons-->
-      <div id='outerLeft'>
-        <div class="answerBtns">
-          <input type="image" src="img/btnA.png" data-clicked class="answerBtn" id="btnA" value="a">
-          <br>
-          <input type="image" src="img/btnB.png" data-clicked class="answerBtn" id="btnB" value="b">
-          <br>
-          <input type="image" src="img/btnC.png" data-clicked class="answerBtn" id="btnC" value="c">
-          <br>
-          <input type="image" src="img/btnD.png" data-clicked class="answerBtn" id="btnD" value="d">
-          <br>
-        </div>
+
+      <div class="answerBtns">
+        <img src="img/btnA.png" data-clicked class="answerBtn" id="btnA" value="a">
+        <br>
+        <img src="img/btnB.png" data-clicked class="answerBtn" id="btnB" value="b">
+        <br>
+        <img src="img/btnC.png" data-clicked class="answerBtn" id="btnC" value="c">
+        <br>
+        <img src="img/btnD.png" data-clicked class="answerBtn" id="btnD" value="d">
+
       </div>
+
 
       <!--StudyBuddy Buttons-->
       <!--StudyBuddy Right Buttons-->
@@ -70,7 +71,7 @@
 
       <!--Content Screen-->
 
-
+    </div>
   </main>
   <h3 id="timer"></h3>
   <!--Main Layout-->
